--- a/assets/stylesheets/base/typography.css
+++ b/assets/stylesheets/base/typography.css
@@ -27,6 +27,9 @@ p, label, .form-item {
 }
 
 p {
+  &:first-child {
+    margin-top: 0;
+  }
   &:last-child {
     margin-bottom: 0;
   }
