--- a/assets/stylesheets/course/card.css
+++ b/assets/stylesheets/course/card.css
@@ -1,14 +1,14 @@
 @block course-card {
   display: flex;
   flex-direction: column;
-  padding: var(--grid-gutter);
+  padding: var(--spacing);
 
   border-radius: var(--border-radius);
   box-shadow: var(--card-box-shadow);
 
   @element categories {
     flex: 0 0 var(--line-height);
-    margin-bottom: var(--grid-gutter);
+    margin-bottom: calc(var(--spacing) * 0.5);
     height: var(--line-height);
   }
 
@@ -40,8 +40,8 @@
     margin: 0;
     overflow: hidden;
 
-    padding-bottom: var(--grid-gutter);
-    margin-bottom: var(--grid-gutter);
+    padding-bottom: calc(var(--spacing) * 0.5);
+    margin-bottom: calc(var(--spacing) * 0.5);
     border-bottom: 1px solid var(--color-bg-separator);
 
     font-family: var(--font-medium);
@@ -54,7 +54,7 @@
     flex: 0 1 15vh;
     max-height: 120px;
     overflow: hidden;
-    margin: 0 0 var(--grid-gutter);
+    margin: 0 0 calc(var(--spacing));
 
     line-height: 1.63;
     color: var(--color-course-card-description);
