--- a/assets/stylesheets/global/table-of-contents.css
+++ b/assets/stylesheets/global/table-of-contents.css
@@ -1,5 +1,6 @@
 :root {
-  --toc-gap-left: calc(var(--grid-gutter) / 2)
+  --toc-gap-left: calc(var(--spacing));
+  --toc-gap-total: calc(var(--toc-gap-left) + var(--spacing) * 0.5);
 }
 @block table-of-contents {
   @element list {
@@ -10,7 +11,7 @@
   }
 
   @element item {
-    margin: 0 0 calc(var(--grid-gutter) / 4);
+    margin: 0 0 calc(var(--spacing) * 0.25);
     padding: 0;
     font-size: 0.9em;
     line-height: 1.8;
@@ -36,7 +37,7 @@
       }
       &:before {
         content: '';
-        left: calc(var(--toc-gap-left) * 3 * -1);
+        left: calc(var(--toc-gap-total) * -1 + 4px);
         bottom: 0;
         width: 3px;
         background: var(--color-course-active);
@@ -57,7 +58,7 @@
         width: 16px;
         height: 16px;
         top: 50%;
-        left: calc(var(--toc-gap-left) * 2 * -1);
+        left: calc(var(--toc-gap-total) / 2 * -1 - 8px);
         transform: translateY(-50%);
 
         background: url('/images/icon-viewed.svg') no-repeat center center;
