--- a/assets/stylesheets/landing-page/modules/highlighted-course.css
+++ b/assets/stylesheets/landing-page/modules/highlighted-course.css
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
 
-    padding: var(--grid-gutter) calc(var(--grid-gutter) * 2);
+    padding: var(--spacing) calc(var(--spacing) * 2);
 
     color: var(--color-text-dark-bg-grey);
   }
@@ -45,7 +45,7 @@
 
   @element category {
     display: inline-block;
-    margin-right: var(--grid-gutter);
+    margin-right: var(--spacing);
 
     font-size: 0.75em;
     letter-spacing: 2px;
@@ -53,7 +53,7 @@
 
   @element title {
     flex: 1 1 auto;
-    margin: 0;
+    margin: 0 0 calc(var(--spacing) * 0.25);
 
     color: var(--color-text-dark-bg);
     font-size: 4vw;
@@ -81,7 +81,7 @@
 
   @element link-wrapper {
     flex: 0 0 auto;
-    margin-top: var(--grid-gutter);
+    margin-top: var(--spacing);
   }
 
   @element link {
