--- a/assets/stylesheets/landing-page/modules/index.css
+++ b/assets/stylesheets/landing-page/modules/index.css
@@ -13,6 +13,6 @@
   }
 
   & + .module {
-    margin-top: var(--grid-gutter);
+    margin-top: var(--spacing);
   }
 }
